# archsem

./: .gitignore  .ocamlformat  INSTALL.md  LICENSE  Makefile  README.md  STYLE.md  archsem.opam  archsem.opam.locked  coq-archsem-arm.opam  coq-archsem-arm.opam.locked  coq-archsem-arm.opam.template  coq-archsem-common.opam  coq-archsem-common.opam.locked  coq-archsem-riscv.opam  coq-archsem-riscv.opam.locked  coq-archsem-riscv.opam.template  coq-archsem-x86.opam  coq-archsem-x86.opam.locked  coq-archsem-x86.opam.template  coq-archsem.opam  coq-archsem.opam.locked  coq-archsem.opam.template  coq-system-semantics.opam  dune  dune-project  test_failures.txt
ArchSem/: ArchInst.v  CandidateExecutions.v  FromSail.v  GenPromising.v  ISAManip.v  Interface.v  SeqModel.v  TermModels.v  _CoqProject  dune
ArchSemArm/: ArmInst.v  ArmSeqAxOpEq.v  ArmSeqModel.v  Casemate.v  GenAxiomaticArm.v  UMArm.v  UMPromising.v  UMSeqArm.v  VMPromising.v  VMSA22Arm.v  VMUMEquivThm.v  _CoqProject  dune
ArchSemArm/tests/: ArmSeqModelIslaTest.v  ArmSeqModelTest.v  IslaInit.v  SailArmRegs.v  UMPromisingTest.v  UMPromisingTinyTest.v  VMPromisingTest.v  VMPromisingTinyTest.v  dune  strldr.toml
ArchSemRiscV/: GenAxiomaticRiscV.v  RiscVInst.v  RiscVSeqModel.v  SailRiscVInstTypes.v  UMAxRiscV.v  _CoqProject  dune
ArchSemRiscV/tests/: RiscVSeqModelTest.v  dune
ArchSemX86/: AxiomaticX86TSO.v  OperationalX86TSO.v  X86Inst.v  _CoqProject  dune
ArchSemX86/tests/: X86OperationalModelTest.v  X86SeqModelTest.v  dune
AxiomaticModels/: GenAxiomaticArm.v  UMArm.v  UMSeqArm.v  VMSA22Arm.v  VMUMEquivThm.v  _CoqProject  dune
Common/: CArith.v  CBase.v  CBitvector.v  CBool.v  CDestruct.v  CExtraction.v  CInduction.v  CList.v  CMaps.v  CMonads.v  COption.v  CResult.v  CSets.v  CSimp.v  CVec.v  Common.v  Effects.v  Exec.v  FMon.v  GRel.v  HVec.v  Options.v  README.md  StateT.v  _CoqProject  dune
Extraction/: ArmInstExtr.v  RegValGen.ml  ZO.ml  arch.mli  archBuild.ml  archsem.ml  archsem.mli  axiom_impl.ml  dune  reggenval.ml  support.ml  utils.ml
GenModels/: ArmInst.v  ArmSeqModel.v  CandidateExecutions.v  TermModels.v  _CoqProject  dune
ISASem/: ArmInst.v  Deps.v  Interface.v  Makefile  README.md  SailArmInstTypes.v  _CoqProject  dune
cli/tests/: MP+dmbs-forbidden.toml  MP+dmbs.toml  MP.toml  VMP+2thread.toml  VMP+BBM.toml  VMP+simple.toml  VMP+tlbi.toml  arm.archsem.toml  dune  eor.toml  ldrpt.toml  mp.toml  mp_dmbs.toml  mpvm.toml
cli/tests/arm/: dune
cli/tests/arm/seq/: AND+negative-bitwise.litmus.toml  EOR+EL1.litmus.toml  EOR+section.litmus.toml  EOR.archsem.toml  EOR.litmus.toml  LDR+fn.litmus.toml  LDR+size.litmus.toml  NOP+mem.archsem.toml
cli/tests/arm/seq-mixed/: STRW_LDRX.archsem.toml  STRW_LDRX.litmus.toml  STRX_LDRW.litmus.toml
cli/tests/arm/um/: MP+dmbs.archsem.toml  MP+dmbs.litmus.toml  MP+section-call.litmus.toml  MP.archsem.toml  MP.litmus.toml
cli/tests/arm/um-mixed/: CoWWR+mixed.archsem.toml  CoWWR+mixed.litmus.toml  MPmixed+dmbs-unobservable.archsem.toml  MPmixed+dmbs.archsem.toml  MPmixed+dmbs.litmus.toml  MPmixed.archsem.toml  MPmixed.litmus.toml  STRW_LDRX.archsem.toml  STRW_LDRX.litmus.toml  STRX_LDRW.archsem.toml
cli/tests/arm/vm/: Alias+VM.litmus.toml  BBMSuccess.archsem.toml  LDRPT+NoBBM.archsem.toml  MP+VM.archsem.toml  MP+VM.litmus.toml  STR+32.litmus.toml  STRLDR+VM.archsem.toml
cli/tests/arm/vm-mixed/: MPmixed+VM.archsem.toml  MPmixed+dmbs+VM.archsem.toml  STRWPT+VM.archsem.toml  STRW_LDRX+VM.archsem.toml  STRX_LDRW+VM.archsem.toml
cli/tests/converter/: dune  dune.inc
cli/tests/converter/expect/: dune
cli/tests/converter/expect/arm/seq-mixed/: STRW_LDRX.archsem.toml  (+3 more)
cli/tests/errors/: conflicting-page-table-data-init.litmus.toml  conflicting-page-table-mapping.litmus.toml  dune  duplicate-isla-fn-arg.litmus.toml  duplicate-page-table-pa.litmus.toml  errors.t  extra-isla-fn-arg.litmus.toml  final-isla-fn-error.litmus.toml  init-isla-fn-error.litmus.toml  invalid-page-table-token.litmus.toml  invalid-register-final.archsem.toml  invalid-register.archsem.toml  invalid-reset.litmus.toml  invalid-step.archsem.toml  invalid-symbol.archsem.toml  invalid-thread-final.archsem.toml  invarch.archsem.toml  invtoml.archsem.toml  justarch.archsem.toml  missing-isla-fn-arg.litmus.toml  missing-step.archsem.toml  name-mismatch.archsem.toml  negative-extz.litmus.toml  negative-final.litmus.toml  negative-location.litmus.toml  no-matching-isla-fn-overload.litmus.toml  page-table-pa-as-va.litmus.toml  thread-numbers.archsem.toml  too-much-data.archsem.toml  unknown-isla-fn.litmus.toml  unmapped-page-table-symbol.litmus.toml  x86-page-table.litmus.toml
cli/tests/seq/: EOR.archsem.toml  EOR.toml  NOP+mem.toml
cli/tests/ump/: EOR.toml  MP+dmbs-unobservable.toml  MP+dmbs.toml  MP.toml  NOP+mem.toml  SB.toml  STRLDR.toml
cli/tests/ump-mixed/: MPmixed.litmus.toml  STRX_LDRW.litmus.toml
cli/tests/unit/: dune  isla_assembler_test.ml  isla_assertion_test.ml  isla_converter_test.ml  isla_input_test.ml  isla_symbols_test.ml  litmus_config_test.ml  litmus_printer_test.ml  litmus_spec_test.ml  litmus_testrepr_test.ml  test_utils.ml  utils.ml
cli/tests/unit/isla/: assembler_test.ml  assertion_test.ml  converter_test.ml  dune  ir_test.ml  normalize_test.ml  page_table_test.ml  pgt_eval_test.ml  pgt_parser_test.ml  symbols_test.ml
cli/tests/unit/litmus/: config_test.ml  dune  error_test.ml  printer_test.ml  test_utils.ml  testrepr_test.ml
cli/tests/vmp/: BBMSuccess.toml  LDRPT+NoBBM.toml  MP+VM.archsem.toml  MP+VM.toml  MP+pos.litmus.toml  STRLDR+VM.litmus.toml  STRLDR+VM.toml  VMP+2thread.toml  VMP+BBM.toml  VMP+nop.toml  VMP+simple.toml  VMP+tlbi.toml
cli/tests/x86/: dune
cli/tests/x86/seq/: XOR.archsem.toml  XOR.litmus.toml
cli/tests/x86/um/: IRIW.archsem.toml  IRIW.litmus.toml  MP.archsem.toml  MP.litmus.toml  R_PO_MFENCE.archsem.toml  R_PO_MFENCE.litmus.toml  SB.archsem.toml  SB.litmus.toml
cli/tests/x86_tso/: EOR.archsem.toml
promising-arm/: Common.v  Exec.v  GenPromising.v  Makefile  PRelations.v  Promising.v  UMPromising.v  VMPromising.v  _CoqProject  dune
(+140 files in other folders)
