opam-version: "0.1"
name: "archsem"
maintainer: "Thibaut Pérami <thibaut.perami@cl.cam.ac.uk>"
authors: "Thibaut Pérami <thibaut.perami@cl.cam.ac.uk>"
license: "BSD-3-Clause"
homepage: "https://github.com/rems-project/archsem"
bug-reports: "https://github.com/rems-project/archsem/issues"
dev-repo: "git+https://github.com/rems-project/archsem.git"

synopsis: "Coq infrastructure to reason about hardware CPU architecture semantics"

depends: [
  "coq" { (>= "8.14.0") | (= "dev") }
  "dune" {>= "3.8"}
  "coq-stdpp"
  "coq-stdpp-unstable"
  "coq-equations" {>= "1.3"}
  "coq-record-update" {>= "0.3.0"}
  "coq-sail-stdpp" {>= "0.15"}
  "coq-hammer-tactics" {>= "1.3.2"}
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
