(coq.theory
 (name ArchSemArm)
 (package coq-archsem-arm)
 (modules
   ArmInst
   UMPromising
   VMPromising
   GenAxiomaticArm
   UMArm
   UMSeqArm
   VMSA22Arm
   VMUMEquivThm
 )
 (theories stdpp Hammer RecordUpdate Equations Ltac2 SailStdpp ASCommon ArchSem SailTinyArm)
 (coqdoc_flags :standard --utf8
               --external https://plv.mpi-sws.org/coqdoc/stdpp stdpp
               --external ../../Common/ASCommon.html ASCommon
               --external ../../ArchSem/ArchSem.html ArchSem
               --coqlib_url https://coq.inria.fr/doc/V8.20.1/stdlib
 )
)

(alias (name arm) (deps (alias all)))
(alias (name coq) (deps (alias all)))
(alias (name default) (deps (alias all)))
