(coq.theory
 (name SSCCommon)
 (package coq-system-semantics)
 (modules
   Common
   CBase
   Options
   CDestruct
   CArith
   CList
   COption
   CBool
   CBitvector
   CInduction
   CMaps
   CSets
   GRel
   CResult
   StateT
   Effects
   FMon
   Exec)
 (theories stdpp Hammer RecordUpdate Equations)
 (coqdoc_flags :standard --utf8
               --external https://plv.mpi-sws.org/coqdoc/stdpp/ stdpp
               --coqlib_url https://coq.inria.fr/doc/V8.17.1/stdlib
 )
)
