(coq.theory
 (name ASCommon)
 (package coq-archsem-common)
 (modules
   Common
   CBase
   CExtraction
   Options
   CDestruct
   CArith
   CList
   COption
   CBool
   CBitvector
   CInduction
   CMaps
   CSets
   GRel
   CResult
   StateT
   Effects
   FMon
   Exec
 )
 (theories stdpp Hammer RecordUpdate Equations Ltac2)
 (coqdoc_flags :standard --utf8
               --external https://plv.mpi-sws.org/coqdoc/stdpp/ stdpp
               --coqlib_url https://coq.inria.fr/doc/V8.20.1/stdlib
 )
)

(alias
 (name coq)
 (deps (alias_rec all))
)
