(env (dev (flags (:standard -w -20-32-33-34-39-67))))

(coq.extraction
  (prelude ArmInstExtr)
  (theories Ltac2 Stdlib stdpp SailStdpp Hammer RecordUpdate Equations SailTinyArm
            ASCommon ArchSem ArchSemArm)
  (extracted_modules ArmInst SeqModel Ascii base Basics BinInt ZArith_dec
                     BinNat BinNums NatDef BinPos PosDef CBase CBitvector CBool
                     CList CMaps COption CVec countable CResult CSets Datatypes
                     decidable definitions Effects Exec fin0 finite fin_maps Fin
                     FMon gmap HexString Interface list_monad list_relations
                     ListDef List list_numbers listset mapset
                     Nat numbers option propset RecordSet pretty
                     sets Specif String0 strings Classes
                     Instances Values MachineWord FromSail ConcurrencyInterfaceV2
                     System_types
                     TermModels vector0 VectorDef Vector)
)

(library
  (name Archsem_ocaml) ; TODO might change
  (libraries zarith))
