(coq.theory
 (name GenModels)
 (package coq-archsem)
 (modules TermModels CandidateExecutions ArmInst ArmSeqModel)
 (theories ISASem ASCommon)
 (coqdoc_flags :standard --utf8
               --external https://plv.mpi-sws.org/coqdoc/stdpp/ stdpp
               --external ../../Common/ASCommon.html ASCommon
               --external ../../ISASem/ISASem.html ISASem
               --coqlib_url https://coq.inria.fr/doc/V8.17.1/stdlib
 )
)

(alias
 (name coq)
 (deps (alias_rec all))
)
