(coq.theory
 (name ISASem)
 (package coq-system-semantics)
 (modules
   Interface
   Deps
   ; SailArmInst
   ; SailArmInst_types
   SailArmInstTypes
   ArmInst)
  (theories SSCCommon)
)

; (rule
;  (targets SailArmInst.v SailArmInst_types.v)
;  (deps armtypes.sail ../armv9-instantiation-types/interfacetypes.sail)
;  (action (run sail -coq armtypes.sail -o SailArmInst))
; )
