(coq.theory
 (name ISASem)
 (package coq-archsem)
 (modules
   Interface
   ; SailArmInst
   ; SailArmInst_types
   SailArmInstTypes
   ArmInst)
 (theories SailStdpp ASCommon)
 (coqdoc_flags :standard --utf8
               --external https://plv.mpi-sws.org/coqdoc/stdpp/ stdpp
               --external ../../Common/ASCommon.html ASCommon
               --coqlib_url https://coq.inria.fr/doc/V8.20.1/stdlib
 )
)

; (rule
;  (targets SailArmInst.v SailArmInst_types.v)
;  (deps armtypes.sail ../armv9-instantiation-types/interfacetypes.sail)
;  (action (run sail -coq armtypes.sail -o SailArmInst))
; )

(alias
 (name coq)
 (deps (alias_rec all))
)
