(coq.theory
 (name PromisingArm)
 (package coq-archsem)
 (modules GenPromising UMPromising VMPromising)
 (theories ISASem ASCommon GenModels)
 (coqdoc_flags :standard --utf8
               --external https://plv.mpi-sws.org/coqdoc/stdpp stdpp
               --external ../../Common/ASCommon.html ASCommon
               --external ../../ISASem/ISASem.html ISASem
               --external ../../GenModels/GenModels.html GenModels
               --coqlib_url https://coq.inria.fr/doc/V8.17.1/stdlib
 )
)

(alias
 (name coq)
 (deps (alias_rec all))
)
