(rule
 (alias runtest)
 (deps (glob_files seq/*.toml) ../../config/Arm.toml)
 (action (concurrent
  (run archsem seq seq)
  (run archsem ump seq)
  (run archsem vmp seq))))

(rule
 (alias runtest)
 (deps (glob_files ump/*.toml) ../../config/Arm.toml)
 (action (concurrent
  (run archsem ump ump)
  (run archsem vmp ump))))

(rule
 (alias runtest)
 (deps (glob_files vmp/*.toml) ../../config/Arm.toml)
 (action (run archsem vmp vmp)))

(rule
 (alias runtest)
 (deps (glob_files x86_tso/*.toml) ../../config/X86.toml)
 (action (run archsem x86_tso x86_tso)))
