(rule
 (alias runtest)
 (deps
  (glob_files seq/*.toml)
  ../../../config/Arm.toml)
 (action
  (concurrent
   (run archsem seq seq)
   (run archsem ump seq)
   (run archsem vmp seq))))

(rule
 (alias runtest)
 (deps
  (glob_files um/*.toml)
  ../../../config/Arm.toml)
 (action
  (concurrent
   (run archsem ump um)
   (run archsem vmp um))))

(rule
 (alias runtest)
 (deps
  (glob_files vm/*.toml)
  ../../../config/Arm.toml)
 (action
  (run archsem vmp vm)))
