(library
 (name test_utils)
 (modules test_utils)
 (libraries litmus otoml))

(tests
 (names litmus_testrepr_test litmus_printer_test)
 (modules litmus_testrepr_test litmus_printer_test)
 (libraries archsem litmus test_utils otoml ounit2)
 (deps (glob_files ../seq/*.toml) (glob_files ../ump/*.toml) (glob_files ../vmp/*.toml)))
