(library
 (name test_utils)
 (modules test_utils)
 (libraries litmus otoml))

(tests
 (names testrepr_test printer_test config_test error_test)
 (modules testrepr_test printer_test config_test error_test)
 (libraries archsem litmus test_utils otoml ounit2)
 (deps (glob_files ../../seq/*.toml) (glob_files ../../ump/*.toml) (glob_files ../../vmp/*.toml)
  ../../../../config/Arm.toml))
