(library
 (name test_utils)
 (modules test_utils)
 (libraries litmus otoml))

(tests
 (names testrepr_test printer_test config_test)
 (modules testrepr_test printer_test config_test)
 (libraries archsem litmus test_utils otoml ounit2)
 (deps
  (source_tree ../../arm)
  (source_tree ../../x86)
  (source_tree ../../../../config)))
